<resources>
    <string name="app_name">OMOYo!</string>
    <string name="subtitle">location..</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="shopname">Apple Store 117 New Delhi India</string>
    <string name="shopitem">iPhone , iPad , iMac , Apple Watch , MacBook , MacPro </string>
    <string name="categoryofshop">Apple Product\'s</string>
    <string name="numberofshop">1007</string>
    <string name="categoryitem">iPhone , iPad , iMac , Apple Watch , MacBook , MacPro </string>
    <string name="serchboxhint">Search Shop\'s     </string>
    <string name="status">Open</string>
    <string name="shoppagetext">iPhone 7 </string>
    <string name="shopcaption">This is the first Apple store in the history of planet to be powered by virtual reality to give it\'s customer a better experience</string>
    <string name="title_activity_shoppage">shoppage</string>
    <string name="urlofshoppage">url</string>
    <string name="shopstatus">Open</string>
    <string name="rate">Rate the Shop </string>
    <string name="rated">Shop Rating</string>
    <string name="shopuserreview">User\'s Review</string>
    <string name="done">DONE</string>
    <string name="spinnerforcity">Select your City</string>
    <string name="spinnerforarea">Select your Area</string>
    <string name="termandcondition">Privacy Policy and Terms and Conditions</string>
    <string name="agree">By continuing you agree to the</string>
    <string name="existinguser">Existing user \? LOGIN</string>
    <string name="shoppagedetalofsomeitem">This is the first Apple store in the history of planet to be powered by virtual reality to give it\'s customer a better experience.Story of Apple -Story begin from Adam go through Newton and now in hand of Tim ,and ya there is no sign of End.</string>
    <string name="title_activity_shoplist">shoplist</string>
    <string name="title_activity_subshopcategory">subshopcategory</string>
    <string name="title_activity_firstpage">firstpage</string>
</resources>
