<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativelayouthorizantalscroll1"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/black"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="top"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:textSize="13sp"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@android:color/white"
                android:text="@string/shopname"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="end|center_horizontal|center_vertical"
                />

        </LinearLayout>
        <LinearLayout
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textSize="13sp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@android:color/white"
                android:text="@string/shopcaption"
                android:layout_marginLeft="2dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="10sp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@android:color/white"
                android:text="@string/shopitem"
                android:layout_marginLeft="2dp"
                />
        </LinearLayout>
    </RelativeLayout>