<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appcolor"
    android:backgroundTint="@color/appcolor"
    android:fitsSystemWindows="true"
    tools:context="com.example.muditi.omoyo.firstpage"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
android:fitsSystemWindows="true"
    >
    <LinearLayout
        android:id="@+id/parentlinearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:fitsSystemWindows="true"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@mipmap/ic_launcher"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/linearlayoutfooter"
            android:layout_marginTop="20dp"
            >
        <LinearLayout
            android:id="@+id/linearlayoutforlocation"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical"
            android:background="@drawable/firstpagelocation"
            android:visibility="invisible"
            >
            <Spinner
                android:id="@+id/spinnerforcity"
                android:layout_width="match_parent"
                android:background="@drawable/firstpagespinnerround"
                android:layout_height="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"></Spinner>
            <Spinner
                android:background="@drawable/firstpagespinnerround"
                android:layout_marginTop="20dp"
                android:id="@+id/spinnerforarea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"></Spinner>
            <Button
                android:id="@+id/doneselectingarea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/done"
                android:background="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="vertical"
                >
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/processbarfirstpagenetwork"
                    android:theme="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:max="200"
                    android:visibility="visible"
                    />
                <LinearLayout
                    android:id="@+id/linearlayoutfirstpagetermandcondition"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="2">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@null"
                        android:text="@string/existinguser"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:layout_gravity="top|center_horizontal"
                        android:gravity="top|center_horizontal"
                        android:layout_marginBottom="20dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        >
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:background="@null"
                            android:text="@string/agree"
                            android:textColor="@android:color/white"
                            android:textSize="13sp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_marginBottom="10dp"
                            />
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:background="@null"
                            android:text="@string/termandcondition"
                            android:textColor="@android:color/white"
                            android:textSize="13sp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center_horizontal|center_vertical"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>