<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_marginTop="2dp"
    android:background="@color/appcolor"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="vertical"
    android:id="@+id/linearlayoutfeedback"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/rated"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/linearlayoutofrated"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:theme="@style/shopratedtext"
            android:background="@null"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:theme="@style/shopratedtext"
            android:background="@null"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:theme="@style/shopratedtext"
            android:background="@null"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:theme="@style/shopratedtext"
            android:background="@null"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:theme="@style/shopratedtext"
            android:background="@null"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/rate"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/linearlayoutofrate"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:theme="@style/shopratedtext"
            android:background="@null"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:theme="@style/shopratedtext"
            android:background="@null"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:theme="@style/shopratedtext"
            android:background="@null"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:theme="@style/shopratedtext"
            android:background="@null"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:theme="@style/shopratedtext"
            android:background="@null"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/shopuserreview"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        />
    <HorizontalScrollView
        android:id="@+id/horizontalscrollofrating"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <include
            android:layout_width="300dp"
            android:layout_height="match_parent"
            layout="@layout/shoppagecommentlayout"
            />
        <include
            android:layout_width="300dp"
            android:layout_height="match_parent"
            layout="@layout/shoppagecommentlayout"
            />
        <include
            android:layout_width="300dp"
            android:layout_height="match_parent"
            layout="@layout/shoppagecommentlayout"
            />
        <include
            android:layout_width="300dp"
            android:layout_height="match_parent"
            layout="@layout/shoppagecommentlayout"
            />
            <include
                android:layout_width="300dp"
                android:layout_height="match_parent"
                layout="@layout/shoppagecommentlayout"
                />
            <include
                android:layout_width="300dp"
                android:layout_height="match_parent"
                layout="@layout/shoppagecommentlayout"
                />
            <include
                android:layout_width="300dp"
                android:layout_height="match_parent"
                layout="@layout/shoppagecommentlayout"
                />
            <include
                android:layout_width="300dp"
                android:layout_height="match_parent"
                layout="@layout/shoppagecommentlayout"
                />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
</LinearLayout>